--- a/README-ankiweb.html
+++ b/README-ankiweb.html
@@ -1,5 +1,5 @@
-<b>Anki Script Manager</b>
-<i>Script Manager</i> makes it easier for you to manage scripts on your note templates.
+<b>Anki Asset Manager</b>
+<i>Asset Manager</i> makes it easier for you to manage scripts on your note templates.
 
 <b>Features</b>
 <ul>
