--- a/README-ankiweb.html
+++ b/README-ankiweb.html
@@ -1,4 +1,4 @@
-<b>Anki Asset Manager</b>
+<a href="https://ko-fi.com/hgiesel" rel="nofollow"><img src="https://i.imgur.com/zlUIlJp.png"></a>
 <i>Asset Manager</i> makes it easier for you to manage scripts on your note templates.
 
 <b>Features</b>
