--- a/README-ankiweb.html
+++ b/README-ankiweb.html
@@ -1,15 +1,33 @@
-<a href="https://ko-fi.com/hgiesel" rel="nofollow"><img src="https://i.imgur.com/zlUIlJp.png"></a>
 <i>Asset Manager</i> makes it easier for you to manage scripts on your note templates.
 
 <b>Features</b>
-<ul>
-<li>Easily insert a bunch of scripts into your note templates.</li>
-<li>Change the code in one place and Script Manager will change the code on all templates.</li>
-<li>Change the order of scripts.</li>
-<li>Very easy to temporarily exchange your scripts with a stub, to make it easier to change the rest of the HTML.</li>
-<li>Restrict scripts to only be inserted for specific cases. For example only on the frontside of your templates, only for specific card types, or only if specific tags are present.</li>
-<li>Offers a hook for you to insert your own script via <a href="https://github.com/hgiesel/anki_script_manager/tree/master/example">your own add-on</a>.  That way you can easily offer your script, give it a name, version it, and update it through the AnkiWeb platform.</li>
-</ul>
+<ul><li>Easily insert JavaScript snippets into your note templates.</li><li>Change the code in one place and Asset Manager will change the code on all templates for you.</li><li>Restrict scripts to only be inserted for specific cases. For example only on the frontside of your templates, or only for specific card types.</li>
 
-<img src="https://raw.githubusercontent.com/hgiesel/anki_script_manager/master/images/main_config.png">Screenshot Main UI</img>
-<img src="https://raw.githubusercontent.com/hgiesel/anki_script_manager/master/images/script_config.png">Screenshot Config UI</img>
+You can use Asset Manager in two different ways:
+<ol><li>Manage JavaScript associated with a note type, and easily insert it into card types, or link against it.</li><li>Manage the complete card templates with it. This allows you to define HTML elements in your card templates in a component-wise structure.</li></ol>
+
+<b>Functionalites</b>
+<img src="https://raw.githubusercontent.com/hgiesel/anki_script_manager/master/images/html_tab.png">HTML Tab
+<img src="https://raw.githubusercontent.com/hgiesel/anki_script_manager/master/images/html_config.png">HTML Config
+
+Insert Stub: Exchanges the Div Element will a HTML stub. This way, you can more easily edit the card types, without having to scroll through all the JavaScript, but Asset Manager will still the remember the position in the document for the scripts to insert.
+Insertion Positions: <ul><li>As External Document: Will copy the script to media folder and paste a script element referencing this external script. Note, that this means that scripts may execute asynchronously and out-of-order!</li><li>Document Head: Uses an Anki webhook to inject the script into the document header. Will not work on mobile!</li><li>Document Body: Uses an Anki webhook to inject the script into the document body. Will not work on mobile!</li><li>Into Template: Will inject the complete script into the template body. This will ensure that scripts are executed immediately and in order.</li></ul>
+Insertion Conditions: <ul><li>Restrict to a specific side: <code>["side", "=", "front"]</code> or <code>["side", "=", "back"]</code></li><li>Restrict to a specific card: <code>["card", "=", "NameOfTheCard"]</code></li><li>Combine conditions: "&amp;" stands for conjunctions (and), "|" stands for disjunction (or): <code>["&amp;", ["card", "=", "Card 1"], ["side", "=", "front"]]</code></li></ul>
+
+<img src="https://raw.githubusercontent.com/hgiesel/anki_script_manager/master/images/script_tab.png">Script Tab
+<img src="https://raw.githubusercontent.com/hgiesel/anki_script_manager/master/images/script_config.png">Script Config
+
+Labels: Labels identify your HTML "snippets", or "fragments". Insertion begins with the "Front" label for the frontside of the card, and "Back" for the backside of the card. When using a label like <code>{{%MyLabel}}</code> in the template, it will be replaced with a fragment with a label "MyLabel".
+Special labels: There are multiple special labels defined, which you can use. These always start with a small letter: <ul><li>idx: will be replaced with the numerical ID of the card</li><li>cardidx: will be replaced with an ID that is found on the tail of the card name. If the card is named "Card 25", this value will evaluate to 25, even if it is in first position.</li><li>scripts: This will evaluate to the output of the JavaScript functionality of the add-on</li></ul>
+Insertion Conditions: Same as above.
+
+<b>For Developers</b>
+Asset Manager offers a hook for you to insert your own JavaScript snippet via <a href="https://github.com/hgiesel/anki_asset_manager/tree/master/example" rel="nofollow">your own add-on</a>. That way you can easily offer your script, give it a name, version it, and update it through the AnkiWeb platform, without making users have to care about pasting the JavaScript to their templates, copy the code to the media folder, etc.
+
+Examples include: <ul><li><a href="https://ankiweb.net/shared/info/1051511270">Anki Persistence</a></li><li><a href="https://ankiweb.net/shared/info/1206316746">Japanese Kanji RTX popup for note types</a></li><li><a href="https://ankiweb.net/shared/info/272311064">Closet For Anki</a></li></ul>
+
+<b>Support</b>
+If you like my add-ons, you can consider supporting me. My add-ons will always be freely available for everybody, but what I can offer you is my sincere thanks, and first-hand technical support, if you have any questions/issues with my add-ons. At the same time it allows me to put more time and focus into developing these and making them as powerful and user-friendly as they are. Thanks for considering!
+
+<a href="https://ko-fi.com/hgiesel" rel="nofollow"><img src="https://i.imgur.com/V1lNWqQ.png"> ko-fi.com/hgiesel</a>
+<a href="https://patreon.com/hgiesel" rel="nofollow"><img src="https://i.imgur.com/PYuJm9x.png"> patreon.com/hgiesel</a>
