Update README for ankiweb

--- a/README-ankiweb.html
+++ b/README-ankiweb.html
@@ -25,6 +25,13 @@ Asset Manager offers a hook for you to insert your own JavaScript snippet via <a
 
 Examples include: <ul><li><a href="https://ankiweb.net/shared/info/1051511270" rel="nofollow">Anki Persistence</a></li><li><a href="https://ankiweb.net/shared/info/1206316746" rel="nofollow">Japanese Kanji RTX popup for note types</a></li><li><a href="https://ankiweb.net/shared/info/272311064" rel="nofollow">Closet For Anki</a></li></ul>
 
+<b>Updates</b>
+2020-12-22:
+* Fix insertion as external file
+* Add support for syntax check
+* Add support for minified insertion
+* Add support for extra button "Assets..." in editor (can be turned on in the add-on settings)
+
 <b>Support</b>
 If you like my add-ons, you can consider supporting me. My add-ons will always be freely available for everybody, but what I can offer you is my sincere thanks, and first-hand technical support, if you have any questions/issues with my add-ons. At the same time it allows me to put more time and focus into developing these and making them as powerful and user-friendly as they are. Thanks for considering!
 
